添加等级评价

--- a/延时分布直方图与理论曲线对比说明.md
+++ b/延时分布直方图与理论曲线对比说明.md
@@ -2,7 +2,7 @@
 
 ## 一、概述
 
-本功能用于可视化延时数据的分布情况，并将实际数据直方图与理论正态分布曲线进行对比，以评估延时数据是否符合正态分布。
+本功能用于可视化绝对延时数据的分布情况，并将实际数据直方图与理论正态分布曲线进行对比，以评估延时数据是否符合正态分布。
 
 **核心文件位置**：
 - 单算法模式：`backend/piano_analysis_backend.py:generate_delay_histogram_plot()`
@@ -13,7 +13,7 @@
 ## 二、完整流程
 
 ```
-1. 数据提取：从offset_data中提取带符号的keyon_offset，转换为ms单位
+1. 数据提取：从offset_data中提取带符号的keyon_offset，转换为绝对延时(ms)
    ↓
 2. 绘制直方图：使用概率密度归一化，总面积=1
    ↓
@@ -39,8 +39,8 @@
 ```python
 def generate_delay_histogram_plot(self) -> Any:
     """
-    生成延时分布直方图，并叠加正态拟合曲线（基于已匹配按键对的带符号keyon_offset）。
-    x轴：延时 (ms)，y轴：概率密度
+    生成延时分布直方图，并叠加正态拟合曲线（基于绝对延时）。
+    x轴：绝对延时 (ms)，y轴：概率密度
     """
     if not self.analyzer or not self.analyzer.note_matcher:
         return self.plot_generator._create_empty_plot("没有分析器")
